--- a/styles/add_tasks_responsive.css
+++ b/styles/add_tasks_responsive.css
@@ -1,11 +1,10 @@
-@media (max-width: 599px) {
+@media (max-width: 320px) {
   .box-sizing {
     display: none;
-    
   }
 
   .span,
-  .nameContact,
+  .nameIdList,
   .nameContact,
   .text_DueDate,
   .inputDate,
@@ -13,11 +12,9 @@
   .inputDate,
   .textCategory,
   .categoryFrame74,
-  .comment,
   .textSubtasks,
   .textAddSubtasks,
-  .description,
-  .asignedTo {
+  .description, .asignedTo {
     font-size: 16px;
   }
 
@@ -32,37 +29,25 @@
   .priority,
   .inputLeft_addTask,
   .frame203 {
-    width: 300px;
-  }
-
-  @media (min-height: 1100px) {
-    .textContainer_addTask {
-      font-size: 47px;
-      margin-top: -300px;
-      margin-left: -235px;
-    }
-
-    .inputLeft_addTask {
-      margin-top: -200px;
-    }
+    width: 263px;
   }
 
   .contentTask {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     overflow: scroll !important;
+    height: calc(100vh - 176px);
   }
 
-  .textContainer_addTask {
-    font-size: 47px;
-    margin-left: 12px;
-    width: 320px;
+  .textContainer_addTask {    
+    margin-left: 27px;
+    width: 263px;   
   }
 
-  .group66_addTask {
-    margin-left: -304px;
+  .text_addTask{
+    font-size: 48px;
+  }
+
+  .group66_addTask {  
+    margin-left: 27px;
     flex-direction: column;
     justify-content: center;
     width: 0;
@@ -71,25 +56,25 @@
   .vector4 {
     display: none;
   }
- 
+
   .inputRight_addTask {
     margin-top: 50px;
-    width: 300px;
+    width: 263px;
   }
 
   .title_v1 {
-    width: 10px;
+    width: 10px;   
   }
 
   .title {
     font-size: 16px;
-    width: 300px;
+    width: 263px;
   }
 
   .title_frame14 {
     padding: 10px 21px;
     gap: 10px;
-    width: 255px;
+    width: 212px;
   }
 
   .text_enterTitle {
@@ -101,61 +86,81 @@
     height: 88px;
     padding: 18px 21px;
     font-size: 16px;
-    width: 300px;
+    width: 255px;
   }
 
   .recursor {
     display: none;
   }
 
-  .categoryFrame74 {
-    width: 300px;
-    padding: 10px 21px;
-    width: 255px;
-  }
   .categoryFrame_74 {
-    width: 300px;
-    padding: 10px 21px;
-    width: 255px;
-  }
+    padding: 10px 21px;    
+    width: 212px;
+  }  
 
-  .list {
+  .categoryFrame74 {
+    padding: 10px 13px;
+    width: 231px;
+}
+
+.circleAvatar{
+  height: 34px;
+  width: 34px;
+}
+  
+
+  .list{
     height: 0px;
   }
 
   .searchContacts {
-    width: 250px;
+    width: 195px;
     font-size: 16px;
   }
 
   .underListContact {
     position: relative;
     height: 76px;
-    width: 294px;
   }
 
-  .contactList {
-    height: 40px;
-    width: 253px;
+  .contactList{
+    height: 40px; 
   }
 
   .custom-checkbox {
-    margin-left: 100px;
+    margin-left: 10px;
     margin-top: 5px;
     width: 210px;
   }
+
+  .custom-checkbox-board label:before {
+    left: 147px;
+}
+
+  .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 147px;
+  }
+
+  .contactList:hover .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 147px;
+}
+ 
+
+  .contactList:hover .custom-checkbox input[type="checkbox"]:checked + label:before {
+    left: 210px;
+}
 
   input[type="date"]::-webkit-calendar-picker-indicator {
     width: 20px;
   }
 
-  .frame28 {
-    width: 300px;
+  .frame28{
+    width: 260px;
   }
 
-  .priority {
+  .priority{
     width: 100%;
-    gap: 12px;
+    flex-direction: column;
   }
 
   .priorityUrgent,
@@ -184,16 +189,16 @@
     font-size: 16px;
   }
 
-  .underlist {
-    position: relative;
+  .underlist{
+    position: relative;    
   }
 
   .options {
-    width: 265px;
+    width: 221px;
   }
 
   .subtasks {
-    width: 300px;
+    width: 258px;
   }
 
   .subtasksFrame14 {
@@ -201,19 +206,536 @@
   }
 
   .subtaskItem {
-    width: 265px;
+    width: 224px;
+  }
+
+  .addTasksFooter{  
+    margin-bottom: 25px;
+    margin-left: 27px;
+    width: 256px;   
+  }
+
+  .comment{
+    display: flex;
+    margin-top: 0px;
+    text-wrap: wrap;
+    font-size: 14px;
+  }
+
+  .secondary {
+    display: none;
+  }
+
+  .primary {
+    gap: 4px;
+    padding: 13px;
+  }
+
+  .textCreateTask {
+    font-size: 17px;
+    gap: 4px;
+    width: 105px;
+  }
+
+  .task_succes{
+    margin-left: 0%;
+    margin-bottom: 400px;
+  }
+
+  .task_succes_container{
+    width: 214px;
+    margin-left: 0px;
+    display: flex;
+
+  }
+
+  .task_succes_message {
+    color: rgb(255, 255, 255);
+    font-size: 17px;
+    text-align: center;
+}
+}
+
+@media (min-width: 321px) and (max-width: 375px) {
+  .box-sizing {
+    display: none;
+  }
+
+  .span,
+  .nameIdList,
+  .nameContact,
+  .text_DueDate,
+  .inputDate,
+  .titlePrio,
+  .inputDate,
+  .textCategory,
+  .categoryFrame74,
+  .textSubtasks,
+  .textAddSubtasks,
+  .description, .asignedTo {
+    font-size: 16px;
+  }
+
+  .description_v1,
+  .frame207,
+  .frame17,
+  .asignedTo_v1,
+  .underListContact,
+  .contactAvatar,
+  .dueDate,
+  .frame211,
+  .priority,
+  .inputLeft_addTask,
+  .frame203 {
+    width: 354px;
+  }
+
+  .contentTask {
+    overflow: scroll !important;
+    height: calc(100vh - 176px);
+  }
+
+  .textContainer_addTask {    
+    margin-left: 8px;
+    width: 263px;   
+    margin-top: 13px;
+  }
+
+  .text_addTask{
+    font-size: 48px;
+  }
+
+  .group66_addTask {  
+    margin-left: 10px;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    margin-top: -32px;
+  }
+
+  .vector4 {
+    display: none;
+  }
+
+  .inputLeft_addTask {
+    margin-top: 50px;
+    width: 354px;
+  }
+
+  .inputRight_addTask {
+    margin-top: 50px;
+    width: 354px;
+  }
+
+  .title_v1 {
+    width: 10px;   
+  }
+
+  .title {
+    font-size: 16px;
+    width: 263px;
+  }
+
+  .title_frame14 {
+    padding: 10px 21px;
+    gap: 10px;
+    width: 310px;
+  }
+
+  .text_enterTitle {
+    font-size: 16px;
+    width: 310px;
+  }
+
+  .description_v1{
+    width: 310px;
+  }
+
+  .frame17{
+  width: 354px;
+  }
+
+  .text_enterDescription {
+    height: 88px;
+    padding: 18px 21px;
+    font-size: 16px;
+    width: 354px;
+  }
+
+  .recursor {
+    display: none;
+  }
+
+  .categoryFrame_74 {
+    padding: 10px 21px;    
+    width: 307px;
+  }  
+
+  .categoryFrame74 {
+    padding: 10px 13px;
+    width: 326px;
+}
+
+.circleAvatar{
+  height: 34px;
+  width: 34px;
+}
+  
+
+  .list{
+    height: 0px;
+  }
+
+  .searchContacts {
+    width: 195px;
+    font-size: 16px;
+  }
+
+  .underListContact {
+    position: relative;
+    height: 76px;
+  }
+
+  .contactList{
+    height: 40px; 
+  }
+
+  .custom-checkbox {
+    margin-left: 10px;
+    margin-top: 5px;
+    width: 210px;
+  }
+
+  .custom-checkbox-board label:before {
+    left: 240px;
+}
+
+  .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 240px;
+  }
+
+  .contactList:hover .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 240px;
+}
+ 
+
+  .contactList:hover .custom-checkbox input[type="checkbox"]:checked + label:before {
+    left: 210px;
+}
+
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    width: 20px;
+  }
+
+  .frame28{
+    width: 260px;
+  }
+
+  .priority{
+    width: 100%;
+    margin-left: 45px;
+   
+  }
+
+  .priorityUrgent,
+  .priorityMedium,
+  .priorityLow {
+    width: 80px;
+    padding: 13px 8px;
+    gap: 8px;
+  }
+
+  .textUrgent {
+    font-size: 16px;
+  }
+
+  .textMedium {
+    font-size: 15px;
+  }
+
+  .textLow {
+    font-size: 16px;
+  }
+
+  .category {
+    width: 100%;
+    position: relative;
+    font-size: 16px;
+  }
+
+  .underlist{
+    position: relative;    
+  }
+
+  .options {
+    width: 307px;
+  }
+
+  .subtasks {
+    width: 350px;
+  }
+
+  .subtasksFrame14 {
+    padding: 10px 21px;
+  }
+
+  .subtaskItem {
+    width: 224px;
+  }
+
+  .addTasksFooter{  
+    margin-bottom: 25px;
+    margin-left: 12px;
+    width: 342px;   
+  }
+
+  .comment{
+    display: flex;
+    margin-top: 0px;
+    font-size: 14px;
+  }
+
+  .secondary {
+    display: none;
+  }
+
+  .primary {
+    gap: 4px;
+    padding: 13px;
+  }
+
+  .textCreateTask {
+    font-size: 17px;
+    gap: 4px;
+    width: 105px;
+  }
+
+  .task_succes{
+    margin-left: 0%;
+    margin-bottom: 400px;
+  }
+
+ .task_succes_container {
+    width: 256px;
+    margin-left: 27px;
+  }
+}
+
+@media (min-width: 376px) and (max-width: 599px) {
+  .box-sizing {
+    display: none;    
+  }
+
+  .span,
+  .nameContact,
+  .nameContact,
+  .text_DueDate,
+  .inputDate,
+  .titlePrio,
+  .inputDate,
+  .textCategory,
+  .categoryFrame74,
+  .textUrgent,
+  .textMedium,
+  .textLow,   
+  .comment,
+  .textSubtasks,
+  .textAddSubtasks,
+  .description,
+  .asignedTo {
+    font-size: 16px;
+  }
+
+  .description_v1,
+  .frame207,
+  .frame17,
+  .asignedTo_v1,
+  .underListContact,
+  .contactAvatar,
+  .dueDate,
+  .frame211,
+  .priority,
+  .frame203 {
+    width: 512px;
+  }
+
+  .contentTask {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: scroll !important;
+  }
+
+  .content_addTask{
+    width: 100%;
+  }
+
+  .textContainer_addTask {
+    font-size: 47px;
+    margin-left: 12px;
+    width: 320px;
+    margin-left: 27px;
+  }
+
+  .group66_addTask {
+    margin-left: 28px;
+    flex-direction: column;
+    justify-content: center;
+    width: 0;
+  }
+
+  .vector4 {
+    display: none;
+  }
+ 
+  .inputRight_addTask {
+    margin-top: 50px;
+    width: 500px;
+  }
+
+  .inputLeft_addTask {
+    width: 500px;
+  }
+
+  .title_v1 {
+    width: 10px;
+  }
+
+  .title {
+    font-size: 16px;
+    width: 300px;
+  }
+
+  .title_frame14 {
+    padding: 10px 21px;
+    gap: 10px;
+    width: 470px;
+  }
+
+  .text_enterTitle {
+    font-size: 16px;
+    width: 470px;
+  }
+
+  .text_enterDescription {
+    height: 88px;
+    padding: 18px 21px;
+    font-size: 16px;
+    width: 512px;
+  }
+
+  .recursor {
+    display: none;
+  }
+
+  .categoryFrame74 {
+    width: 300px;
+    padding: 10px 21px;
+    width: 466px;
+  }
+  .categoryFrame_74 {
+    width: 300px;
+    padding: 10px 21px;
+    width: 463px;
+  }
+
+  .list {
+    height: 0px;
+  }
+
+  .searchContacts {
+    width: 250px;
+    font-size: 16px;
+  }
+
+  .underListContact {
+    position: relative;
+    height: 76px;
+    width: 501px;
+  }
+
+  .contactList {
+    height: 40px;
+    width: 458px;
+  }
+
+  .inputDate{
+    width: 471px;
+  }
+
+  .custom-checkbox {
+    margin-left: 100px;
+    margin-top: 5px;
+    width: 210px;
+  }
+
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    width: 20px;
+  }
+
+  .frame28 {
+    display: flex;
+    width: 506px;
+    justify-content: space-evenly;
+    flex-direction: column;
+  }
+
+  .priority {
+    width: 100%;
+    gap: 60px;
+  }
+
+  .priorityUrgent,
+  .priorityMedium,
+  .priorityLow {
+    width: 112px;
+    padding: 13px 8px;
+  }
+
+  .taskCategory {
+    display: flex;
+    width: 468px;
+    justify-content: space-between;
+}
+
+  .category {
+    width: 100%;
+    position: relative;
+    font-size: 16px;
+  }
+
+  .underlist {
+    position: relative;
+  }
+
+  .options {
+    width: 472px;
+  }
+
+  .subtasks {
+    width: 507px;
+  }
+
+  .subtasksFrame14 {
+    padding: 10px 21px;
+  }
+
+  .subtaskItem {
+    width: 470px;
   }
 
   .addTasksFooter {
     margin-bottom: 90px;
-    margin-left: 0px;
-    width: 300px;
+    margin-left: 29px;
+    width: 503px;
   }
 
   .comment {
     display: flex;
     margin-top: 0px;
     text-wrap: wrap;
+    width: 167px;
   }
 
   .secondary {
@@ -236,33 +758,23 @@
 
   .task_succes_container {
     width: 256px;
+    margin-left: 93px;
   }
+
   .custom-checkbox-board label:before {
-    left: 140px;
+    left: 378px;
   }
 
   .custom-checkbox-board input[type="checkbox"]:checked + label:before {
-    left: 140px;
+    left: 378px;
   }
 
   .contactList:hover .custom-checkbox-board input[type="checkbox"]:checked + label:before {
-    left: 140px;
+    left: 378px;
 }
 }
 
 @media (min-width: 600px) and (max-width: 799px) {
-  @media (min-height: 1100px) {
-    .textContainer_addTask {
-      font-size: 47px;
-      margin-top: -200px !important;
-      margin-left: -235px;
-    }
-
-    .inputLeft_addTask {
-      margin-top: -100px;
-    }
-  }
-
   .box-sizing {
     display: none;
   }
@@ -313,7 +825,7 @@
   .textContainer_addTask {
     font-size: 47px;
     margin-top: 120px;
-    margin-left: -235px;
+    margin-left: 18px;
   }
 
   .group66_addTask {
@@ -331,10 +843,6 @@
   .inputRight_addTask {
     margin-top: 44px;
     width: 518px;
-  }
-
-  .content_addTask {
-    margin-top: 356px;
   }
 
   .title {
@@ -475,6 +983,12 @@
   .task_succes {
     margin-left: 0%;
   }
+
+  .task_succes_container {
+    margin-left: 39px;
+    margin-top: 139px;
+  }
+
 
   .custom-checkbox-board label:before {
     left: 400px;
@@ -668,6 +1182,12 @@
   .task-succes {
     margin-right: 50px;
   }
+
+  .task_succes_container {
+    margin-left: 39px;
+    margin-top: 139px;
+  }
+
   .custom-checkbox-board label:before {
     left: 585px;
   }
@@ -798,6 +1318,7 @@
   .frame211 {
     width: 640px;
   }
+
   .inputDate {
     width: 780px;
   }
@@ -836,8 +1357,14 @@
     display: flex;
     width: 250px;
   }
+
   .task_succes {
     margin-bottom: 700px;
+  }
+
+  .task_succes_container {
+    margin-left: -62px;
+    margin-top: 139px;
   }
 
   .custom-checkbox-board label:before {
